# opticol

./: .gitignore  pyproject.toml
opticol/: __init__.py  _mapping.py  _meta.py  _sentinel.py  _sequence.py  _set.py  factories.py  factory.py  mutable_sequence.py  mutable_sequence.pyi  mutable_set.py  projector.py  sequence.py  sequence.pyi  set.py
