[project]
name = "opticol"
version = "0.1.0"
description = "Implementations for the various Python Collection ABCs that optimize along various axes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py312"]
preview = true

[dependency-groups]
dev = [
    "black>=25.12.0",
    "codespell>=2.4.1",
    "mypy>=1.19.0",
    "pylint>=4.0.4",
]
